--- a/index.html
+++ b/index.html
@@ -114,9 +114,8 @@
 
                     <div class="home__data">
                         <h1 class="home__title">Hi, I'm Adarsh</h1>
-                        <h3 class="home__subtitle">I am a Programing </h3>
-                        <p class="home__description">High level experience in web design and development
-                            knowledge, producing quality work.</p>
+                        <h3 class="home__subtitle">I am a programmer and photographer </h3>
+                        <p class="home__description">I express my creativity with coding and have deep intrest in capturing with my lens !</p>
                         <a href="#contact" class="button button--flex">
                             Contact Me <i class="uil uil-message button__icon"></i>
                         </a>
@@ -325,8 +324,18 @@
                     </div>
                 </div>
             </div>
+          
         </section>
-
+        <h2 class="galleryTitle">My Clicks</h2>
+        <div class="gallery">
+          
+            <div class="image-container">
+                <img src="assets/img/Balkumari 1.jpg" alt="Photograph 1">
+            </div>
+            <div class="image-container">
+                <img src="assets/img/Balkumari.jpg" alt="Photograph 2">
+            </div>
+        </div>
         <!--==================== QUALIFICATION ====================-->
         <section class="qualification section">
             <h2 class="section__title">Qualification</h2>
