--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                     <a href="https://www.facebook.com/adarsh.karn.1804/" target="_blank" class="footer__social">
                         <i class="uil uil-facebook-f"></i>
                     </a>
-                    <a href="https://www.instagram.com/adarshkarn_a/" target="_blank" class="footer__social">
+                    <a href= target="_blank" class="footer__social">
                         <i class="uil uil-instagram"></i>
                     </a>
                     <a href="##" target="_blank" class="footer__social">
