--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                 -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
 
                                
-                                <image class="home__blob-img" x="12" y="18" href="https://www.facebook.com/photo/?fbid=1456051192008616&set=pb.100028112466813.-2207520000" />
+                                <image class="home__blob-img" x="12" y="18" href="assets/img/image.png " />
                             </g>
                         </svg>
                     </div>
